<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new">Create New</string>
    <string name="login">Login</string>
    <string name="welcome_text">Welcome to Shoe Store App</string>
    <string name="welcome_hint">This Application is about Shoes Store that you can show shoes list and add new shoe to the list</string>
    <string name="next">Next</string>
    <string name="welcome_title">Welcome</string>
    <string name="shoe_store_instructions">Shoe Store Instructions</string>
    <string name="instructions_hint">This is describes instructions that you should follow to use the application</string>
    <string name="start">Start</string>
    <string name="instructions_title">Instructions</string>
    <string name="shoes_list_title">Shoes List</string>
    <string name="logout">Log Out</string>
    <string name="details_title">Shoe Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
</resources>
