<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    using constraint layout for complexity of views like buttons chaining
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/email"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_dimen"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="@dimen/text_margin_start"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_dimen"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/text_margin_start"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="123dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shoes" />

        <Button
            android:id="@+id/login"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_end"
            android:layout_marginEnd="32dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/createNew"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.867" />

        <Button
            android:id="@+id/createNew"
            style="@style/AlternativeButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_end"
            android:text="@string/create_new"
            app:layout_constraintBaseline_toBaselineOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>