<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.udacity.shoestore.viewmodels.ShoesListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailsFragment">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:src="@drawable/shoes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_dimen"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:text="@={viewmodel.nameText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/size"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height_dimen"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/shoe_size"
            android:inputType="numberDecimal"
            android:text="@={``+ viewmodel.sizeText}"
            app:layout_constraintEnd_toStartOf="@+id/company"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

        <EditText
            android:id="@+id/company"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            android:text="@={viewmodel.companyText}"
            app:layout_constraintBaseline_toBaselineOf="@+id/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/size" />

        <EditText
            android:id="@+id/description"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="text|textMultiLine"
            android:paddingTop="10dp"
            android:text="@={viewmodel.descriptionText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size" />

        <Button
            android:id="@+id/save"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="@{() -> viewmodel.onSaveShoe()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/cancel"
            style="@style/AlternativeButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:onClick="@{() -> viewmodel.onCancelShoe()}"
            android:text="@android:string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/save"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>